# plutus-use-cases

./: .gitignore  README.md  default.nix
.obelisk/impl/: github.json
backend/: backend.cabal
backend/src/: Backend.hs
backend/src/Backend/: Notification.hs
common/: common.cabal
common/src/Common/: Api.hs  Schema.hs
dep/cardano-addresses/: github.json
dep/cardano-base/: github.json
dep/cardano-crypto/: github.json
dep/cardano-ledger-specs/: github.json
dep/cardano-node/: github.json
dep/cardano-prelude/: github.json
dep/cardano-wallet/: github.json
dep/iohk-monitoring-framework/: github.json
dep/ouroboros-network/: github.json
dep/plutus/: github.json
dep/rhyolite/: github.json
frontend/: frontend.cabal
frontend/src/: Frontend.hs
use-case-2/: ARCHITECTURE.md  README.md
use-case-2/backend/src/: Backend.hs
use-case-2/common/src/Common/: Api.hs
use-case-2/dep/plutus-starter/: github.json
use-case-2/frontend/src/: Frontend.hs
use-case-2/frontend/src/Frontend/: ChooseWallet.hs
use-case-2/static/: cardano-node-testnet
