name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: aeson
               , aeson-gadt-th
               , base
               , beam-automigrate
               , beam-core
               , beam-postgres
               , common
               , constraints-extras
               , dependent-sum
               , dependent-sum-template
               , frontend
               , gargoyle-postgresql
               , gargoyle-postgresql-connect
               , monad-logger
               , monad-logger-extras
               , lens
               , mtl
               , obelisk-backend
               , obelisk-route
               , postgresql-simple
               , resource-pool
               , rhyolite-backend
               , rhyolite-backend-db
               , rhyolite-backend-notification-postgres
               , stm
               , transformers
               , text
               , vessel

               , cardano-api
               , cardano-addresses
               , cardano-addresses-cli
               , cardano-wallet-core
               , cardano-slotting
               , containers
               , freer-extras
               , freer-simple
               , optparse-applicative
               , ouroboros-network
               , plutus-chain-index
               , plutus-ledger
               , iohk-monitoring
               , yaml
               , prettyprinter >=1.1.0.1
  exposed-modules:
    Backend
    Backend.Notification
    Backend.Schema
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded -fno-show-valid-hole-fits
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
